--- a/contact.html
+++ b/contact.html
@@ -31,7 +31,7 @@
             <img src="https://images.unsplash.com/photo-1519085360753-af0119f7cbe7?ixlib=rb-1.2.1&auto=format&fit=crop&w=800&q=80" alt="Shyam's Profile">
             <div class="contact-text">
                 <h1>About Me</h1>
-                <h4>Hello! I'm <span>SHYAM</span></h4>
+                <h4>Hello! I'm <span>MAYANK</span></h4>
                 <p>This website was designed as a project to showcase some of the world's most popular sports cars and exotic dealerships across India. I'm passionate about automotive design, performance engineering, and creating digital experiences that capture the luxury and excitement of high-end vehicles.</p>
                 <p>With a background in web development and a lifelong interest in cars, I've combined these passions to create this platform that highlights the finest automobiles available in the Indian market.</p>
                 <button><i class='bx bx-download'></i> Download Resume</button>
@@ -155,3 +155,5 @@
     </script>
 </body>
 </html>
+
+
