--- a/contact.html
+++ b/contact.html
@@ -90,7 +90,7 @@
                 </div>
                 <div class="project-card">
                     <div class="project-image">
-                        <img src="https://images.unsplash.com/photo-1581688534291-cfd7a90508c1?ixlib=rb-1.2.1&auto=format&fit=crop&w=800&q=80" alt="Automotive Blog">
+                        <img src="images/kevin-bhagat-3cLpiv8h5so-unsplash.jpg" alt="Automotive Blog">
                     </div>
                     <div class="project-details">
                         <h3 class="project-title">Automotive Blog</h3>
@@ -100,7 +100,7 @@
                 </div>
                 <div class="project-card">
                     <div class="project-image">
-                        <img src="https://images.unsplash.com/photo-1596720426673-e4e14290f0cc?ixlib=rb-1.2.1&auto=format&fit=crop&w=800&q=80" alt="Car Configurator">
+                        <img src="images/hoyoun-lee-QSZ7Fq1MsG0-unsplash.jpg" alt="Car Configurator">
                     </div>
                     <div class="project-details">
                         <h3 class="project-title">Car Configurator</h3>
