--- a/contact.html
+++ b/contact.html
@@ -28,7 +28,7 @@
 
     <section class="contact">
         <div class="main">
-            <img src="Images/profesor .jpg" alt="Shyam's Profile">
+            <img src="images/profecar2.jpg" alt="Shyam's Profile">
             <div class="contact-text">
                 <h1>About Me</h1>
                 <h4>Hello! I'm <span> Mayank</span></h4>
